testsuite/tests/typing-layouts-products/parsing_unary_term.compilers.reference
File "parsing_unary_term.ml", line 10, characters 12-13:
10 | let x = #(42)
                 ^
Error: Syntax error
